Add getReportcountry endpoint

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -1,2 +1,13 @@
 # This is the main configuration file for the application.
 # https://www.playframework.com/documentation/latest/ConfigFile
+
+# RapidApi Covid19
+rapidApi.baseUrl="https://covid-19-data.p.rapidapi.com"
+
+# Headers
+rapidApi.host=covid-19-data.p.rapidapi.com
+rapidApi.key=1c2b7ca912msh986ceff7c49a805p170f77jsnd777b103c8f2
+
+#Swagger
+api.version="1.0"
+swagger.api.basepath="http://localhost:9000"
